--- a/PS_1/task2/index.html
+++ b/PS_1/task2/index.html
@@ -8,19 +8,22 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Playfair+Display&display=swap&subset=cyrillic" rel="stylesheet">
 </head>
+
 <body>
-  <div class="basicBlock">
-    <div class="header">  <h2> Header </h2> </div>
-    <div class="leftColumn"> <b> Left Column </b> <br> Menu <br> Menu <br> Menu <br> Menu</div>
-    <div class="rightColumn"> <b> Right Column </b> <br> link <br> link <br> link <br> link </div>
-    <div class="content"> <h2> Content </h2>
+  <div class="wrapper">
+    <div class="header"><h1>Header</h1></div>
+    <div class="menu"><b>Page menu</b><br>Menu<br>Menu<br>Menu<br>Menu<br>Menu</div>
+    <div class="content"><h2>Content</h2>
+      <img id="content_img1" src="happy-smile-guy.jpg" alt="smile">
+      <p>Lorem ipsum dolor sit amet, at choro homero sit. Tritani ponderum facilisis eum at, sit error torquatos persequeris eu. Mel ne veniam tempor causae, pertinax interesset eos id. Facilis torquatos elaboraret est ex, dolore euismod mea eu, nec ea assum malorum delectus. Eu aeterno dolores probatus sea, iisque vivendo cum et.</p>
+      <p>Lorem ipsum dolor sit amet, at choro homero sit. Tritani ponderum facilisis eum at, sit error torquatos persequeris eu. Mel ne veniam tempor causae, pertinax interesset eos id. Facilis torquatos elaboraret est ex, dolore euismod mea eu, nec ea assum malorum delectus. Eu aeterno dolores probatus sea, iisque vivendo cum et.</p>
       <p>Lorem ipsum dolor sit amet, at choro homero sit. Tritani ponderum facilisis eum at, sit error torquatos persequeris eu. Mel ne veniam tempor causae, pertinax interesset eos id. Facilis torquatos elaboraret est ex, dolore euismod mea eu, nec ea assum malorum delectus. Eu aeterno dolores probatus sea, iisque vivendo cum et.</p>
       <p>Lorem ipsum dolor sit amet, at choro homero sit. Tritani ponderum facilisis eum at, sit error torquatos persequeris eu. Mel ne veniam tempor causae, pertinax interesset eos id. Facilis torquatos elaboraret est ex, dolore euismod mea eu, nec ea assum malorum delectus. Eu aeterno dolores probatus sea, iisque vivendo cum et.</p>
       <p>Lorem ipsum dolor sit amet, at choro homero sit. Tritani ponderum facilisis eum at, sit error torquatos persequeris eu. Mel ne veniam tempor causae, pertinax interesset eos id. Facilis torquatos elaboraret est ex, dolore euismod mea eu, nec ea assum malorum delectus. Eu aeterno dolores probatus sea, iisque vivendo cum et.</p>
       <p>Lorem ipsum dolor sit amet, at choro homero sit. Tritani ponderum facilisis eum at, sit error torquatos persequeris eu. Mel ne veniam tempor causae, pertinax interesset eos id. Facilis torquatos elaboraret est ex, dolore euismod mea eu, nec ea assum malorum delectus. Eu aeterno dolores probatus sea, iisque vivendo cum et.</p>
     </div>
   </div>
-  <footer class="footer"><b> @SGS </b></footer>
+  <footer class="footer"><b>@SGS</b></footer>
 
 </body>
 </html>
