--- a/PS_2/Table task/index.html
+++ b/PS_2/Table task/index.html
@@ -1,126 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Table task</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Table task</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
 </head>
 <body>
-  <section class="container" style="margin-top: 2rem">
+<section class="container" style="margin-top: 2rem">
     <h2 class="title is-2">PS2 JS+RegExp</h2>
     <h4 class="subtitle is-4">Table task</h4>
     <nav class="panel" style="width: 600px;">
-      <p class="panel-heading">
-        Customer's Bill
-      </p>
-      <div class="panel-block">
-        <div class="field is-horizontal" style="width: 100%">
-          <div class="field-body">
-            <div class="field">
-              <p class="control">
-                <input class="input" type="text" placeholder="Search by name">
-              </p>
-            </div>
-            <div class="field">
-              <p class="control">
-                <div class="select" style="width: 100%">
-                  <select placeholder="Filter by category" style="width: 100%">
-                    <option value="" selected>Filter by category</option>
-                    <option value="supplies">Office supplies</option>
-                    <option value="furniture">Furniture</option>
-                    <option value="other">Other</option>
-                  </select>
+        <p class="panel-heading">
+            Customer's Bill
+        </p>
+        <div class="panel-block">
+            <div class="field is-horizontal" style="width: 100%">
+                <div class="field-body">
+                    <div class="field">
+                        <p class="control">
+                            <input id="findGoods" class="input" type="text" placeholder="Search by name">
+                        </p>
+                    </div>
+                    <div class="field">
+                        <p class="control">
+                        <div class="select" style="width: 100%">
+                            <select id="filter" placeholder="Filter by category" style="width: 100%">
+                                <option value="" selected>Filter by category</option>
+                                <option value="supplies">Office supplies</option>
+                                <option value="furniture">Furniture</option>
+                                <option value="other">Other</option>
+                            </select>
+                        </div>
+                        </p>
+                    </div>
                 </div>
-              </p>
             </div>
-          </div>
         </div>
-      </div>
-      <div class="panel-block">
-        <table class="table is-striped is-fullwidth">
-          <thead>
-            <tr>
-              <th>Category ▼</th>
-              <th>Name ▼</th>
-              <th>Amount</th>
-              <th>Price</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Office supplies</td>
-              <td>Pen</td>
-              <td>10</td>
-              <td>2$</td>
-            </tr>
-            <tr>
-              <td>Furniture</td>
-              <td>Chair</td>
-              <td>1</td>
-              <td>20$</td>
-            </tr>
-            <tr>
-              <td>Other</td>
-              <td>Trash bin</td>
-              <td>1</td>
-              <td>5$</td>
-            </tr>
-          </tbody>
-          <tfoot>
-            <tr>
-              <th></th>
-              <th></th>
-              <th>Total:</th>
-              <th>45$</th>
-            </tr>
-          </tfoot>
-        </table>
-      </div>
+        <div class="panel-block">
+            <table class="table is-striped is-fullwidth">
+                <thead>
+                <tr>
+                    <th id="category">Category ▼▲</th>
+                    <th id="name">Name ▼▲</th>
+                    <th>Amount</th>
+                    <th>Price</th>
+                </tr>
+                </thead>
+                <tbody id="tBody">
+                </tbody>
+                <tfoot>
+                <tr>
+                    <th></th>
+                    <th></th>
+                    <th>Total:</th>
+                    <th id="sumTotal">
+                    </th>
+                </tr>
+                </tfoot>
+            </table>
+        </div>
     </nav>
-  </section>
+</section>
 
-  <script type="text/javascript">
-    const GOODS = [
-      {
-        category: 'furniture',
-        name: 'Chair',
-        amount: 1,
-        price: 20
-      },
-      {
-        category: 'supplies',
-        name: 'Gel Pen',
-        amount: 20,
-        price: 2
-      },
-      {
-        category: 'other',
-        name: 'Trash Bin',
-        amount: 1,
-        price: 5
-      },
-      {
-        category: 'furniture',
-        name: 'Sofa',
-        amount: 1,
-        price: 50
-      },
-      {
-        category: 'supplies',
-        name: 'Notebook',
-        amount: 3,
-        price: 3
-      },
-      {
-        category: 'other',
-        name: 'Calendar 2019',
-        amount: 1,
-        price: 3
-      }
-    ];
-
-  </script>
+<script src="main.js"></script>
 </body>
 </html>
