--- a/PS_3/Select/index.html
+++ b/PS_3/Select/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>DropDown menu</title>
 </head>
 <body>    
   <div id="dropdownID" class="dropdown">
